* Improved io::FileSystem to allow to specify a 'file provider' to use when loading resources. This is particularly useful if for example everything should be loaded from within a single archive, as specifying that file provider will ensure that no ambiguities ensue when loading files (such as textures) if other files with the same name exist somewhere else. * Modified all consumers of the io::FileSystem to allow for an IFileProvider to be specified. * io::FileSystem now extends Object so it can be grab()ed and drop()ed.

--- a/Visual Studio 2008 Project Files/fire_engine.vcproj
+++ b/Visual Studio 2008 Project Files/fire_engine.vcproj
@@ -288,6 +288,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\src\DirectoryFileProvider.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\src\DirectoryFileProvider.h"
+			>
+		</File>
+		<File
 			RelativePath="..\src\File.cpp"
 			>
 		</File>
@@ -357,6 +365,10 @@
 		</File>
 		<File
 			RelativePath="..\src\IFile.h"
+			>
+		</File>
+		<File
+			RelativePath="..\src\IFileProvider.h"
 			>
 		</File>
 		<File
