--- a/Visual Studio 2008 Project Files/fire_engine.vcproj
+++ b/Visual Studio 2008 Project Files/fire_engine.vcproj
@@ -520,6 +520,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\src\list.h"
+			>
+		</File>
+		<File
 			RelativePath="..\src\Logger.cpp"
 			>
 		</File>
