* CMeshBuffer improved. * Removed {set|get}Texture from IMeshBuffer - they should now be included as part of the Material class. * Few improvements to Array and Counter.

--- a/Visual Studio 2008 Project Files/fire_engine.vcproj
+++ b/Visual Studio 2008 Project Files/fire_engine.vcproj
@@ -604,6 +604,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\src\OctreeSceneNode.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\src\OctreeSceneNode.h"
+			>
+		</File>
+		<File
 			RelativePath="..\src\OpenGLRenderer.cpp"
 			>
 		</File>
