--- a/trunk/Visual Studio 2008 Project Files/fire_engine.vcproj
+++ b/trunk/Visual Studio 2008 Project Files/fire_engine.vcproj
@@ -604,6 +604,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\src\OctreeSceneNode.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\src\OctreeSceneNode.h"
+			>
+		</File>
+		<File
 			RelativePath="..\src\OpenGLRenderer.cpp"
 			>
 		</File>
